@@ -63,7 +63,7 @@ public class JobDefinitionResourceImpl implements JobDefinitionResource {
       dto.updateSuspensionState(engine);
 
     } catch (IllegalArgumentException e) {
-      String message = String.format("The suspension state of Job Definition with id %s could not be updated due to: %s", jobDefinitionId, e.getMessage());
+      String message = "The suspension state of Job Definition with id %s could not be updated due to: %s".formatted(jobDefinitionId, e.getMessage());
       throw new InvalidRequestException(Status.BAD_REQUEST, e, message);
     }
 
