@@ -515,7 +515,7 @@ class HistoricActivityInstanceStateTest {
     for (HistoricActivityInstance instance : allInstances) {
       if (instance.getActivityId().equals(activityId)) {
         found++;
-        assertThat(instance.isCanceled()).as(String.format("expect <%s> to be %scanceled", activityId, (canceled ? "" : "non-"))).isEqualTo(canceled);
+        assertThat(instance.isCanceled()).as("expect <%s> to be %scanceled".formatted(activityId, (canceled ? "" : "non-"))).isEqualTo(canceled);
       }
     }
 
@@ -548,7 +548,7 @@ class HistoricActivityInstanceStateTest {
     for (HistoricActivityInstance instance : allInstances) {
       if (instance.getActivityId().equals(activityId)) {
         found++;
-        assertThat(instance.isCompleteScope()).as(String.format("expect <%s> to be %scompleting", activityId, (completing ? "" : "non-"))).isEqualTo(completing);
+        assertThat(instance.isCompleteScope()).as("expect <%s> to be %scompleting".formatted(activityId, (completing ? "" : "non-"))).isEqualTo(completing);
       }
     }
 
